--- a/package.json
+++ b/package.json
@@ -5,22 +5,31 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch server.js ./src/loggers/discord.log.js"
+    "start": "SET NODE_ENV=development && node --watch server.js "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.554.0",
+    "@aws-sdk/cloudfront-signer": "^3.541.0",
+    "@aws-sdk/s3-request-presigner": "^3.554.0",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.1.0",
     "crypto": "^1.0.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.1",
-    "redis": "^4.6.13",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.9.4",
+    "redis": "^3.1.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
