--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,14 +7,14 @@ on:
   push:
     branches: ["main"]
 env:
-  AWS_BUCKET_ACCESS_KEY: ${{ variables.AWS_BUCKET_ACCESS_KEY}}
-  AWS_BUCKET_NAME: ${{variables.AWS_BUCKET_NAME}}
-  AWS_BUCKET_PUBLIC_KEY: ${{variables.AWS_BUCKET_PUBLIC_KEY}}
-  AWS_BUCKET_REGION: ${{variables.AWS_BUCKET_REGION}}
-  AWS_BUCKET_SECRET_KEY: ${{variables.AWS_BUCKET_SECRET_KEY}}
-  CHANNELID_DISCORD: ${{variables.CHANNELID_DISCORD}}
-  CLOUDINARY_SERECT_KEY: ${{variables.CLOUDINARY_SERECT_KEY}}
-  TOKEN_DISCORD: ${{variables.TOKEN_DISCORD}}
+  AWS_BUCKET_ACCESS_KEY: ${{ variable.AWS_BUCKET_ACCESS_KEY}}
+  AWS_BUCKET_NAME: ${{variable.AWS_BUCKET_NAME}}
+  AWS_BUCKET_PUBLIC_KEY: ${{variable.AWS_BUCKET_PUBLIC_KEY}}
+  AWS_BUCKET_REGION: ${{variable.AWS_BUCKET_REGION}}
+  AWS_BUCKET_SECRET_KEY: ${{variable.AWS_BUCKET_SECRET_KEY}}
+  CHANNELID_DISCORD: ${{variable.CHANNELID_DISCORD}}
+  CLOUDINARY_SERECT_KEY: ${{variable.CLOUDINARY_SERECT_KEY}}
+  TOKEN_DISCORD: ${{variable.TOKEN_DISCORD}}
 jobs:
   build:
     runs-on: self-hosted
