--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.554.0",
     "@aws-sdk/cloudfront-signer": "^3.541.0",
     "@aws-sdk/s3-request-presigner": "^3.554.0",
+    "accesscontrol": "^2.2.1",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.1.0",
@@ -29,8 +30,12 @@
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
+    "nodemailer": "^6.9.13",
     "redis": "^3.1.2",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "compression": "^1.7.4",
